--- a/site.yml
+++ b/site.yml
@@ -53,18 +53,13 @@
     - role: satellite_check
       tags: satellite_check
     - role: satellite_content_view
-      tags:
-        - satellite_content_view
+      tags: satellite_content_view
     - role: content_view_version_cleanup
-      tags:
-        - satellite_content_cleanup
+      tags: satellite_content_cleanup
     - role: content_view_errata
-      tags:
-        - content_view_errata
+      tags: content_view_errata
     - role: satellite_upload
-      tags:
-        - satellite_upload
+      tags: satellite_upload
     - role: aws_role_assume
-      tags:
-        - aws_role_assume
+      tags: aws_role_assume
 
