--- a/satellite_check/tasks/main.yml
+++ b/satellite_check/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Verify Satellite/Foreman Connectivity
   block:
     - name: Check Foreman/Satellite Server Connectivity
-      theforeman.foreman.status_info:
+      redhat.satellite.status_info:
         server_url:  "{{ satellite_deployment_server }}"
         username:    "{{ satellite_deployment_admin_username }}"
         password:    "{{ satellite_deployment_admin_password }}"
