--- a/satellite_content_view/tasks/main.yml
+++ b/satellite_content_view/tasks/main.yml
@@ -6,7 +6,7 @@
         name: satellite_check
 
     - name: "Publish and Promote {{ satellite_content_view }} for {{ satellite_deployment_server.split('/')[2] }}"
-      theforeman.foreman.content_view_version:
+      redhat.satellite.content_view_version:
         username: "{{ satellite_deployment_admin_username }}"
         password: "{{ satellite_deployment_admin_password }}"
         server_url: "{{ satellite_deployment_server }}"
