--- a/create_satellite_tag_values/tasks/main.yml
+++ b/create_satellite_tag_values/tasks/main.yml
@@ -6,7 +6,7 @@
         name: satellite_check
 
     - name: "Check The CV version"
-      theforeman.foreman.content_view_info:
+      redhat.satellite.content_view_info:
         username: "{{ satellite_deployment_admin_username }}"
         password: "{{ satellite_deployment_admin_password }}"
         server_url: "{{ satellite_deployment_server }}"
