--- a/content_view_version_cleanup/tasks/find_and_delete_unused_cv_versions.yml
+++ b/content_view_version_cleanup/tasks/find_and_delete_unused_cv_versions.yml
@@ -1,6 +1,6 @@
 ---
 - name: "Find content view versions of {{ cv.name }}"
-  theforeman.foreman.resource_info:
+  redhat.satellite.resource_info:
     server_url: "{{ satellite_deployment_server | default(omit) }}"
     username: "{{ satellite_deployment_admin_username | default(omit) }}"
     password: "{{ satellite_deployment_admin_password | default(omit) }}"
