--- a/group_vars/all/all.yml
+++ b/group_vars/all/all.yml
@@ -51,6 +51,7 @@ aws_account_no: 273354650151
 aws_tag_key_value: "Server_Name_Update"
 aws_tag_value: 
 aws_tag_key_cleanup: Server_update_
+aws_snapshot_id: 
 
 # Instance Info
 metadata_paths: 
